--- a/academy/tools/function-fudger/index.html
+++ b/academy/tools/function-fudger/index.html
@@ -50,7 +50,7 @@
       <h3>Graph of Approximation</h3>
     <p>Explore the fudged function at different degrees by sliding the variable <em>n</em>.</p>
       <script src="https://www.desmos.com/api/v1.1/calculator.js?apiKey=dcb31709b452b1cf9dc26972add0fda6"></script>
-      <div id="calculator" class="center" style="width: 600px; height: 400px; font-family: serif;"></div>
+      <div id="calculator" class="center" style="width: 600px; height: 400px;"></div>
       <script>
         var elt = document.getElementById('calculator');
         var calculator = Desmos.GraphingCalculator(elt);
