User Experience update to buttons.
The "toggle cycles visible" button now turns off view-all, because it's extremely laggy to draw all the points and all the circles.
The "toggle all view" button now turns off the cycles if it's going to be on, and turns them back on if it's going to be off.

--- a/fourier/index.html
+++ b/fourier/index.html
@@ -11,8 +11,8 @@
     
     <div id="settings" class="center">
         <button onclick="fourier.drawDots = !fourier.drawDots;">Toggle Dot Display</button>
-        <button onclick="fourier.cyclesVisible = !fourier.cyclesVisible;">Toggle Fourier Circles Visible</button>
-        <button onclick="fourier.all = !fourier.all; fourier.cyclesVisible = false;">Toggle All Trace Visible</button>
+        <button onclick="fourier.cyclesVisible = !fourier.cyclesVisible; fourier.all = false;">Toggle Fourier Circles Visible</button>
+        <button onclick="fourier.all = !fourier.all; fourier.cyclesVisible = !fourier.all;">Toggle All Trace Visible</button>
         <p style="color: white; margin: 0.2%;"><em>arrows: up = more circles, down = fewer circles, right = longer trace, left = shorter trace</em></p>
         <p style="margin: 0.2%;" id="settings-display"></p>
     </div>
