--- a/academy/index.html
+++ b/academy/index.html
@@ -25,7 +25,7 @@
   <div id="greyout"></div>
 
   <ul id="nav">
-    <li id="logo" style="float: left;"><a href="arongil.com" style="padding: 0; font-size: 0;"><img src="/academy/Arongil Logo.png"></a></li>
+    <li id="logo" style="float: left;"><a href="https://www.arongil.com" style="padding: 0; font-size: 0;"><img src="/academy/Arongil Logo.png"></a></li>
     <li><a href="#contact">Contact</a></li>
     <li><a href="#about">About</a></li>
     <li class="dropdown">
