--- a/index.html
+++ b/index.html
@@ -14,27 +14,15 @@
   <body>
     <ul id="nav">
       <li id="logo" style="float: left;"><a href="#nav" style="padding: 0; font-size: 0;"><img src="/academy/Arongil Logo.png"></a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li><a href="#about">About</a></li>
+      <li><a href="https://www.arongil.com/academy">Academy</a></li>
       <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Games</a>
         <div class="dropdown-content" id="games-dropdown"><a href="https://www.arongil.com/bird-breaker">Bird Breaker</a><a href="https://www.arongil.com/minesweeper">Minesweeper</a><a href="https://www.arongil.com/fourier">Fourier Sketch</a><a href="https://www.arongil.com/gravity-pong">Gravity Pong</a><a href="https://www.arongil.com/3D-Engine">3D Engine</a><a href="https://github.com/Arongil/Arongil/releases/tag/2.3">Editable World</a></div>
       </li>
       <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Products</a>
-        <div class="dropdown-content" id="products-dropdown"><a href="https://www.arongil.com/academy">Arongil Academy</a><a href="https://www.arongil.com/schedule">Schedule</a><a href="https://www.arongil.com/sound">Shhh!</a><a href="https://www.arongil.com/realtime">Realtime</a><a href="https://www.arongil.com/disease">Disease Simulation</a><a href="https://www.arongil.com/programs-collection">Programs Collection</a></div>
+        <div class="dropdown-content" id="products-dropdown"><a href="https://www.arongil.com/schedule">Schedule</a><a href="https://www.arongil.com/sound">Shhh!</a><a href="https://www.arongil.com/realtime">Realtime</a><a href="https://www.arongil.com/disease">Disease Simulation</a><a href="https://www.arongil.com/programs-collection">Programs Collection</a></div>
       </li>
     </ul>
-
-    <div id="info" style="font-size: 3vh;">
-      <div id="about" class="block" style="background-color: #d8d8d8;">
-        <h2 style="text-align: center;" class="block-header">About</h2>
-        <p>Arongil.com is a free, online library of mathematics, games, and products.</p>
-      </div>
-      <div id="contact" class="block" style="background-color: #d8d8d8;">
-        <h2 style="text-align: center;" class="block-header">Contact</h2>
-        <p>You can contact us at <em>contact@arongil.com</em>.</p>
-      </div>
-    </div>
   </body>
 </html>
