--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
         <div class="dropdown-content" id="products-dropdown"><a href="https://www.arongil.com/schedule">Schedule</a><a href="https://www.arongil.com/sound">Shhh!</a><a href="https://www.arongil.com/realtime">Realtime</a><a href="https://www.arongil.com/disease">Disease Simulation</a><a href="https://www.arongil.com/programs-collection">Programs Collection</a></div>
       </li>
     </ul>
+	
+	<script type="text/javascript" src="three.min.js"></script>
+    <script type="text/javascript" src="feathers.js"></script>
   </body>
 </html>
