--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <link href="base-styles.css" rel="stylesheet" type="text/css" />
   </head>
-  <body id="overflow: hidden;">
+  <body style="overflow: hidden;">
     <ul id="nav">
       <li id="logo" style="float: left;"><a href="#nav" style="padding: 0; font-size: 0;"><img src="/academy/Arongil Logo.png"></a></li>
       <li><a href="https://www.arongil.com/academy">Academy</a></li>
