Add e^ and \ln as default function prefixes

--- a/academy/tools/function-generator/index.html
+++ b/academy/tools/function-generator/index.html
@@ -9,7 +9,7 @@
         <div id="settings">
             <p>Special Numbers: </p><input id="numbers" type="text" value="\pi,e">
             <p>Variables: </p><input id="variables" type="text" value="x,y,z">
-            <p>Functions: </p><input id="functions" type="text" value="\cos,\sin">
+            <p>Functions: </p><input id="functions" type="text" value="\cos,\sin,e^,\ln">
             <p>Multiplication Symbol: </p><input id="mult-symbol" type="text" value="()" placeholder="default is ()">
             <p>Exponential Symbol: </p><input id="exponential-symbol" type="text" value="^" placeholder="default is ^">
             <p>Length: </p><input id="length" type="text" value="5">
