--- a/academy/index.html
+++ b/academy/index.html
@@ -31,7 +31,7 @@
       <a href="javascript:void(0)" class="dropbtn">Subjects</a>
       
       <!-- REPLACE BELOW: SUBJECT-DROPDOWN -->
-      <div class="dropdown-content" id="subject-dropdown"><a href="#differential-equations">Differential Equations</a><a href="#calculus-practice">AP Calculus Practice</a><a href="#trigonometry">Trigonometry</a><a href="#fun">Fun</a><a href="#history">US History</a><a href="#tools">Tools</a></div>
+      <div class="dropdown-content" id="subject-dropdown"><a href="#differential-equations">Differential Equations</a><a href="#ap-practice">AP Calculus Practice</a><a href="#trigonometry">Trigonometry</a><a href="#fun">Fun</a><a href="#history">US History</a><a href="#tools">Tools</a></div>
       <!-- REPLACE ABOVE: SUBJECT-DROPDOWN -->
     </li>
   </ul>
