--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </li>
       <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Products</a>
-        <div class="dropdown-content" id="products-dropdown"><a href="https://www.arongil.com/schedule">Schedule</a><a href="https://www.arongil.com/sound">Shhh!</a><a href="https://www.arongil.com/realtime">Realtime</a><a href="https://github.com/Arongil/Rebel-Reader">Rebel Reader</a><a href="https://www.arongil.com/disease">Disease Simulation</a><a href="https://www.arongil.com/programs-collection">Programs Collection</a></div>
+        <div class="dropdown-content" id="products-dropdown"><a href="https://www.arongil.com/schedule">Schedule</a><a href="https://www.arongil.com/sound">Shhh!</a><a href="https://www.arongil.com/realtime">Realtime</a><a href="https://rebel-reader.arongil.com">Rebel Reader</a><a href="https://www.arongil.com/disease">Disease Simulation</a><a href="https://www.arongil.com/programs-collection">Programs Collection</a></div>
       </li>
     </ul>
 	
