--- a/random-caller/index.html
+++ b/random-caller/index.html
@@ -15,3 +15,20 @@
         <script src="main.js"></script>
     </body>
 </html>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Random Caller</title>
+
+        <link href="style.css" rel="stylesheet" type="text/css" />
+    </head>
+    <body>
+        <div id="settings">
+            <textarea id="names" rows=4 cols=40 placeholder="Enter names here, separated by commas"></textarea>
+        </div><br>
+        <button id="generate" onclick="generate();">Random Name!</button>
+        <p id="output"></p>
+
+        <script src="main.js"></script>
+    </body>
+</html>
