--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li><a href="https://www.arongil.com/academy">Academy</a></li>
       <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Games</a>
-        <div class="dropdown-content" id="games-dropdown"><a href="https://www.arongil.com/bird-breaker">Bird Breaker</a><a href="https://www.arongil.com/minesweeper">Minesweeper</a><a href="https://www.arongil.com/fourier">Fourier Sketch</a><a href="https://www.arongil.com/gravity-pong">Gravity Pong</a><a href="https://www.arongil.com/3D-Engine">3D Engine</a><a href="https://github.com/Arongil/Arongil/releases/tag/2.3">Editable World</a></div>
+        <div class="dropdown-content" id="games-dropdown"><a href="https://www.arongil.com/bird-breaker">Bird Breaker</a><a href="https://www.arongil.com/minesweeper">Minesweeper</a><a href="https://www.arongil.com/fourier">Fourier Sketch</a><a href="https://www.arongil.com/gravity-pong">Gravity Pong</a><a href="https://github.com/Arongil/Arongil/releases/tag/2.3">Editable World</a><a href="https://www.arongil.com/3D-Engine">3D Engine</a><a href="https://www.arongil.com/sudoku">Sudoku</a></div>
       </li>
       <li class="dropdown">
         <a href="javascript:void(0)" class="dropbtn">Products</a>
