Add .txt files in German and English

--- a/maurer/index.html
+++ b/maurer/index.html
@@ -527,7 +527,7 @@
                 <p>Bismarck hat "Gedanken und Erinnerungen" geschrieben. Damit ist dieser Titel also schon vergeben. Er hätte gut gepaßt. Viele Male habe ich über andere Titel nachgedacht und darüber, ob es überhaupt einen Titel geben soll. Zwei gefielen mir am besten: "Gedenken und Gedanken" und "Überliefert, erlebt und ... überdacht". Für letzteres habe ich mich dann entschieden.</p>
             </div>
             <div class="right-column">
-                <p>Bismarck wrote "Thoughts and Memories". So that title is already taken. It would have fit well. Many times I've thought about other titles and whether there should be a title at all. Two appealed to me the most: "Remembrance and Reflections" and "Conveyed, Experienced, and ... Reflected Upon". I've decided on the latter.</p>
+                <p>Bismarck wrote "Thoughts and Memories". So that title is already taken. It would have fit well. Many times I've thought about other titles and whether there should be a title at all. Two appealed to me the most: "Remembrance and Reflections" and "Handed Down, Lived, and Remembered". I've decided on the latter.</p>
             </div>
             <div class="clearfix"></div>
             
